--- a/index.css
+++ b/index.css
@@ -63,3 +63,16 @@
   .taste-description {
     display: none;
   }
+  .video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .vid-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+  }
